<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/forgot_box"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/forgot_password_relative_ImageViewCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/cross_icon" />

        <TextView
            android:id="@+id/tvLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/text_xhdpi_25"
            android:text="@string/forgetpassword_ui_tvLine1"
            android:textColor="@color/color_3f3f3f"
            android:textSize="@dimen/margin_xhdpi_22" />

        <TextView
            android:id="@+id/tvLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLine1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_xhdpi_12"
            android:layout_marginTop="@dimen/margin_xhdpi_9"
            android:text="@string/forgetpassword_ui_tvLine2"
            android:textColor="@color/color_3f3f3f" />

        <TextView
            android:id="@+id/tvLine3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLine2"
            android:layout_centerHorizontal="true"
            android:text="@string/forgetpassword_ui_tvLine3"
            android:textColor="@color/color_3f3f3f" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/margin_xhdpi_7"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/forgetPassword_ed_EmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xhdpi_9"
            android:background="@drawable/forgot_input"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            
             />

        <Button
            android:id="@+id/forgetPassword_ui_btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgetpassword_ui_btnSend"
            android:textSize="@dimen/margin_xhdpi_18"
            android:textColor="@color/color_3f3f3f"
             />
    </LinearLayout>

</LinearLayout>